--- a/src/main/PanelRestok.form
+++ b/src/main/PanelRestok.form
@@ -17,14 +17,14 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="155" max="32767" attributes="0"/>
+              <EmptySpace pref="140" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
                   <Component id="jScrollPane1" alignment="1" min="-2" pref="494" max="-2" attributes="0"/>
-                  <Component id="CetakStok" min="-2" pref="114" max="-2" attributes="0"/>
+                  <Component id="CetakStok" alignment="1" min="-2" pref="114" max="-2" attributes="0"/>
                   <Group type="102" alignment="1" attributes="0">
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="Id_Barang" min="-2" max="-2" attributes="0"/>
-                          <Component id="Id_barang" min="-2" pref="50" max="-2" attributes="0"/>
+                          <Component id="Id_Barang" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="Id_barang" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
                       </Group>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
@@ -43,8 +43,8 @@
                       </Group>
                       <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="Harga_Barang" min="-2" pref="97" max="-2" attributes="0"/>
-                          <Component id="Harga_barang" min="-2" max="-2" attributes="0"/>
+                          <Component id="Harga_Barang" alignment="0" min="-2" pref="97" max="-2" attributes="0"/>
+                          <Component id="Harga_barang" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="input" min="-2" max="-2" attributes="0"/>
@@ -83,7 +83,7 @@
               <Component id="jScrollPane1" min="-2" pref="335" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="CetakStok" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="84" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -94,29 +94,19 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Id_barangActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JLabel" name="Id_Barang">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Id Barang"/>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JTextField" name="Nama_barang">
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Nama_barangActionPerformed"/>
       </Events>
-    </Component>
-    <Component class="javax.swing.JLabel" name="Nama_Barang">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Nama Barang"/>
-      </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="Stok_f">
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Stok_fActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JLabel" name="Stok_l">
+    <Component class="javax.swing.JLabel" name="Id_Barang">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Stok"/>
+        <Property name="text" type="java.lang.String" value="Id Barang"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="input">
@@ -127,6 +117,21 @@
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="inputMouseClicked"/>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="inputActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JTextField" name="Harga_Barang">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Harga_BarangActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="Nama_Barang">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Nama Barang"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="Harga_barang">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Harga per Barang"/>
+      </Properties>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <AuxValues>
@@ -145,30 +150,6 @@
                 <Column editable="true" title="Harga per Barang" type="java.lang.Object"/>
               </Table>
             </Property>
-            <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
-              <TableColumnModel selectionModel="0">
-                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                  <Title/>
-                  <Editor/>
-                  <Renderer/>
-                </Column>
-                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                  <Title/>
-                  <Editor/>
-                  <Renderer/>
-                </Column>
-                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                  <Title/>
-                  <Editor/>
-                  <Renderer/>
-                </Column>
-                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                  <Title/>
-                  <Editor/>
-                  <Renderer/>
-                </Column>
-              </TableColumnModel>
-            </Property>
             <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
@@ -184,14 +165,9 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CetakStokActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JTextField" name="Harga_Barang">
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Harga_BarangActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JLabel" name="Harga_barang">
+    <Component class="javax.swing.JLabel" name="Stok_l">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Harga per Barang"/>
+        <Property name="text" type="java.lang.String" value="Stok"/>
       </Properties>
     </Component>
   </SubComponents>
